--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/content": "^2.9.0",
     "@nuxt/ui": "^2.10.0",
+    "@nuxthq/studio": "2.2.1",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "^3.0.2",
@@ -21,8 +22,8 @@
     "remark-unwrap-images": "^3.0.1"
   },
   "devDependencies": {
-    "nuxt-icon": "^0.6.0",
-    "@nuxtjs/tailwindcss": "^6.9.4"
+    "@nuxtjs/tailwindcss": "^6.9.4",
+    "nuxt-icon": "^0.6.0"
   },
   "packageManager": "pnpm@10.10.0"
 }
